# oop_project

./: .gitignore  README.md
1/: CMakeLists.txt  main.cpp
1/include/: solution.h
1/src/: solution.cpp
1/test/: test.cpp
